<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignupActivity"
    android:orientation="vertical">

    <EditText
            android:id="@+id/et_registerFname"
            android:hint="@string/first_name"
            android:layout_marginTop="@dimen/signupMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <EditText
            android:id="@+id/et_registerLname"
            android:hint="@string/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <EditText
            android:id="@+id/et_registerEmail"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <EditText
            android:id="@+id/et_registerMobile"
            android:hint="@string/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <EditText
            android:id="@+id/et_registerPass"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <EditText
            android:id="@+id/et_registerCompSize"
            android:hint="@string/compsize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/sp_add_employee"
        android:autofillHints="Select your role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal">
    </Spinner>

    <Button
            android:id="@+id/bt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Register"/>

</LinearLayout>